--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Swatch Saarthi</title>
     <meta name="description" content="Smart waste management system for cleaner communities" />
     <meta name="author" content="Swatch Saarthi" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <link rel="icon" type="image/png" href="/logo1.png?v=2" />
+    <link rel="shortcut icon" href="/logo1.png?v=2" />
+    <link rel="apple-touch-icon" href="/logo1.png?v=2" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo1.png?v=2" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo1.png?v=2" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/logo1.png?v=2" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/logo1.png?v=2" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
